Refactor Security Part
